Revert "Merge branch 'master' of https://github.com/SudoAnirudh/_E-V-A_"
This reverts commit 3681cf123d74ea0e3449d3597d3188f7207155c7, reversing
changes made to 1e648e847a5a7d702bba2efbab58dbc5d197a4fb.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,11 @@
 {
-  "name": "Eva",
-  "description": "whatsapp bot build with nodejs",
-  "repository": "https://github.com/SudoAnirudh/_E-V-A_",
-  "logo": "https://api.zeks.xyz/logo.jpg",
-  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation"]
+  "name": "_EVA_",
+  "description": "Lightweight WhatsApp Bot",
+  "repository": "https://github.com/",
+  "logo": "",
+  "keywords": [
+    "bot",
+    "whatsapp",
+    "whatsapp-bot"
+  ]
 }
