--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Eva",
+  "name": "stikerinbot",
   "version": "1.1.2",
-  "description": "WhatsApp Bot",
+  "description": "WhatsApp Bot Ringan",
   "main": "index.js",
   "directories": {
     "lib": "lib",
@@ -9,22 +9,22 @@
     "plugins": "plugins"
   },
   "scripts": {
-    "start": "node index.js --public",
+    "start": "node index.js --self",
     "test": "node test.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SudoAnirudh/_E-V-A_.git"
+    "url": "git+https://github.com/ariffb25/stikerinbot.git"
   },
   "keywords": [
     "whatsapp-bot"
   ],
-  "author": "SudoAnirudh",
+  "author": "Ariffb",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ariffb25/stikerinbot/issues"
   },
-  "homepage": "https://github.com/SudoAnirudh/_E-V-A_",
+  "homepage": "https://github.com/ariffb25/stikerinbot",
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.2",
     "awesome-phonenumber": "^2.54.0",
