--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stikerinbot",
+  "name": "Eva",
   "version": "1.1.2",
   "description": "WhatsApp Bot Ringan",
   "main": "index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ariffb25/stikerinbot.git"
+    "url": "git+https://github.com/SudoAnirudh/_E-V-A_.git"
   },
   "keywords": [
     "whatsapp-bot"
@@ -22,9 +22,9 @@
   "author": "Ariffb",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ariffb25/stikerinbot/issues"
+    "url": "https://github.com/SudoAnirudh/_E-V-A_/issues"
   },
-  "homepage": "https://github.com/ariffb25/stikerinbot",
+  "homepage": "https://github.com/SudoAnirudh/_E-V-A_",
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.2",
     "awesome-phonenumber": "^2.54.0",
