--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "keywords": [
     "whatsapp-bot"
   ],
-  "author": "Ariffb",
+  "author": "Anirudh",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/SudoAnirudh/_E-V-A_/issues"
